--- a/index.html
+++ b/index.html
@@ -389,6 +389,10 @@
                 display: none;
             }
 
+            .flow-line {
+                stroke-width: 1.6;
+            }
+
             /* Force Text Center - Same style as PC */
             .sequence-item text {
                 text-anchor: middle !important;
@@ -1591,17 +1595,35 @@
                 items.forEach((item, index) => {
                     if (index === items.length - 1) return;
 
-                    const currentRect = item.getBoundingClientRect();
                     const nextItem = items[index + 1];
-                    const nextRect = nextItem.getBoundingClientRect();
 
-                    // SVG 좌표계로 변환
-                    const svgRect = svg.getBoundingClientRect();
-                    const viewBox = svg.viewBox.baseVal;
-                    const scaleY = viewBox.height / svgRect.height;
+                    let y1;
+                    let y2;
 
-                    const y1 = (currentRect.bottom - svgRect.top) * scaleY;
-                    let y2 = (nextRect.top - svgRect.top) * scaleY;
+                    if (isMobileFlow) {
+                        const currentY = parseFloat(item.getAttribute('data-layout-y'));
+                        const nextY = parseFloat(nextItem.getAttribute('data-layout-y'));
+
+                        if (Number.isFinite(currentY) && Number.isFinite(nextY)) {
+                            const gap = nextY - currentY;
+                            const pad = Math.min(120, Math.max(60, gap * 0.2));
+                            y1 = currentY + pad;
+                            y2 = nextY - pad;
+                        }
+                    }
+
+                    if (!Number.isFinite(y1) || !Number.isFinite(y2)) {
+                        const currentRect = item.getBoundingClientRect();
+                        const nextRect = nextItem.getBoundingClientRect();
+
+                        // SVG 좌표계로 변환
+                        const svgRect = svg.getBoundingClientRect();
+                        const viewBox = svg.viewBox.baseVal;
+                        const scaleY = viewBox.height / svgRect.height;
+
+                        y1 = (currentRect.bottom - svgRect.top) * scaleY;
+                        y2 = (nextRect.top - svgRect.top) * scaleY;
+                    }
 
                     if (effectiveStopY !== null) {
                         if (y1 >= effectiveStopY) return;
@@ -1610,12 +1632,16 @@
 
                     // 연결선 길이가 충분할 때만 추가
                     if (y2 - y1 > 40) {
+                        const gap = y2 - y1;
+                        const lineLength = isMobileFlow
+                            ? Math.min(140, Math.max(80, gap * 0.3))
+                            : Math.min(80, Math.max(40, gap * 0.2));
                         const midY = (y1 + y2) / 2;
                         const line = document.createElementNS('http://www.w3.org/2000/svg', 'line');
                         line.setAttribute('x1', centerX);
-                        line.setAttribute('y1', midY - 25);
+                        line.setAttribute('y1', midY - (lineLength / 2));
                         line.setAttribute('x2', centerX);
-                        line.setAttribute('y2', midY + 25);
+                        line.setAttribute('y2', midY + (lineLength / 2));
                         line.classList.add('flow-line');
                         line.style.animationDelay = `${(index % 12) * 0.12}s`;
                         flowGroup.appendChild(line);
@@ -1710,6 +1736,7 @@
 
                             const originalY = parseInt(item.getAttribute('data-y') || 0);
                             const shiftY = newItemY - originalY;
+                            const layoutY = currentY + newItemY;
 
                             // Center all text elements (including multi-line tspans)
                             item.querySelectorAll('text').forEach(textEl => {
@@ -1726,6 +1753,7 @@
                             });
 
                             item.setAttribute('transform', `translate(0, ${shiftY})`);
+                            item.setAttribute('data-layout-y', String(layoutY));
 
                             if (newItemY > maxItemY) maxItemY = newItemY;
                         });
